Eevee: viewport artifacts #52855

Closed
opened 2017-09-20 19:03:28 +02:00 by Dalai Felinto · 8 comments

System Information
Tested in multiple OSs, NVidia, AMD, Linux and Windows.

Blender Version
Broken: 9068c0743e and other versions [*].
Worked: d5478e20cc

I looked at other versions in between (f565d8c4ae, 0c5ff0e558, 5ae63f03d9, 3b080c3f66c.), but they all have a different problem, so it's hard to bisect reliabily here. That said, 9068c0743e is the first one where the problem look as it does now.

Short description of error
Viewport shows multiple artifacts.

Exact steps for others to reproduce the error
Open the wanderer sample file and move around (see video below), or playback (alt+a) the wasp_bot file.

video.mp4

**System Information** Tested in multiple OSs, NVidia, AMD, Linux and Windows. **Blender Version** Broken: 9068c0743e0 and other versions [*]. Worked: d5478e20cc5 *I looked at other versions in between (f565d8c4ae, 0c5ff0e5585, 5ae63f03d92, 3b080c3f66c.), but they all have a different problem, so it's hard to bisect reliabily here. That said, 9068c0743e0 is the first one where the problem look as it does now.* **Short description of error** Viewport shows multiple artifacts. **Exact steps for others to reproduce the error** Open the wanderer sample file and move around (see video below), or playback (alt+a) the wasp_bot file. [video.mp4](https://archive.blender.org/developer/F839275/video.mp4)
Author
Owner

Changed status to: 'Open'

Changed status to: 'Open'
Author
Owner

Added subscriber: @dfelinto

Added subscriber: @dfelinto
Clément Foucault was assigned by Dalai Felinto 2017-09-20 19:04:26 +02:00
Author
Owner

Added subscriber: @fclem

Added subscriber: @fclem
Author
Owner

@fclem I will be surprised if you don't get this problem in your Intel as well.

@fclem I will be surprised if you don't get this problem in your Intel as well.

This issue was referenced by 803c757c2b

This issue was referenced by 803c757c2b64258890aa30d20187fd8daf83b5e4
Author
Owner

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

This issue was referenced by d97f52f015

This issue was referenced by d97f52f0154923c3b2ba5f6095c35b1dad6aba0f

This issue was referenced by 73e1435ab1

This issue was referenced by 73e1435ab1efc95262cd494fd535d4cfb723c5c8
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#52855
No description provided.