Fix T52855: Eevee: viewport artifacts

Partial revert of 9068c0743e08.
This commit tried to do two things:

(1) Fix UBO binding logic [good]
(2) "Improve" texture binding logic [bad]

Don't ever mix different fixes and refactors in the same commit.